# insight

./: .gitignore  .gitmodules
Insight/: CMakeLists.txt
Insight/src/Insight/: Application.cpp  Application.h  Assert.h  AssetDescriptor.cpp  AssetDescriptor.h  AssetType.cpp  AssetType.h  Base64.cpp  Base64.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Fs.cpp  Fs.h  ImageUtils.cpp  ImageUtils.h  Insight.h  Library.cpp  Library.h  Log.cpp  Log.h  Math.h  RuntimeLibrary.cpp  RuntimeLibrary.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Uuid.cpp  Uuid.h  stb_image_write.cpp
Insight/src/Insight/Assets/: Asset.cpp  Asset.h  Material.cpp  Material.h  Prefab.cpp  Prefab.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
Insight/src/Insight/Components/: CameraComponent.cpp  CameraComponent.h  ComponentRegistry.cpp  ComponentRegistry.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  EnvironmentComponent.cpp  EnvironmentComponent.h  HierarchyComponent.cpp  HierarchyComponent.h  NameComponent.cpp  NameComponent.h  PointLightComponent.cpp  PointLightComponent.h  PrefabComponent.cpp  PrefabComponent.h  ScriptingComponent.cpp  ScriptingComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h  UuidComponent.cpp  UuidComponent.h
Insight/src/Insight/Events/: Event.cpp  Event.h
Insight/src/Insight/Geometry/: BoxGeometry.cpp  BoxGeometry.h  Geometry.cpp  Geometry.h  PlaneGeometry.cpp  PlaneGeometry.h  SphereGeometry.cpp  SphereGeometry.h
Insight/src/Insight/Loaders/: AssetLoader.cpp  AssetLoader.h  MaterialLoader.cpp  MaterialLoader.h  StaticMeshLoader.cpp  StaticMeshLoader.h  TextureLoader.cpp  TextureLoader.h
Insight/src/Insight/Renderer/: Buffer.cpp  Buffer.h  Command.cpp  Command.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  DebugMarkers.cpp  DebugMarkers.h  DefaultResources.cpp  DefaultResources.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DynamicGraphicsPipeline.cpp  DynamicGraphicsPipeline.h  EquirectangularToCubemapRenderer.cpp  EquirectangularToCubemapRenderer.h  Fence.cpp  Fence.h  FinalCompositorPass.cpp  FinalCompositorPass.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageBarrier.h  ImageView.cpp  ImageView.h  IrradianceRenderer.cpp  IrradianceRenderer.h  PipelineLayout.cpp  (+25 more)
Insight/src/Insight/Renderer/Passes/: BloomPass.cpp  BloomPass.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  OutputPass.cpp  OutputPass.h
Insight/src/Insight/Scripting/: Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h  JSEngine.h  JSEngineInit.h  Modules.cpp  Modules.h  NativeApi.cpp  NativeApi.h  Scene.cpp  Scene.h  ScriptHost.cpp  ScriptHost.h
Insight/src/Insight/Scripting/Components/: StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Insight/src/Insight/Shaders/: BloomDown.frag  BloomUp.frag  DefaultPBRMaterial.frag  Environment.frag  Environment.vert  EnvironmentPrefilter.frag  EnvironmentPrefilter.vert  EquirectangularToCubemap.frag  EquirectangularToCubemap.vert  FinalCompositorPass.frag  FullscreenTriangle.vert  GBuffer.vert  Irradiance.frag  Irradiance.vert  Lighting.frag  Output.frag
Insight/src/Insight/Shaders/includes/: DirectionalLight.glsl  FXAA.glsl  GBufferFragIo.glsl  GBufferSamplers.glsl  GBufferVertIo.glsl  Math.glsl  Model.glsl  PBRLighting.glsl  ParallaxOcclusionMapping.glsl  PointLight.glsl  SampleSphericalMap.glsl  Scene.glsl  UnpackNormal.glsl
Insight/src/Insight/Ui/: Context.cpp  Context.h  ImGui.cpp  ImGui.h  ImNodes.cpp  ImNodes.h  Panel.cpp  Panel.h  Utils.h  Widgets.cpp  Widgets.h
Insight/src/Insight/Windows/: Window.cpp  Window.h  WindowEvents.h
Portent/: CMakeLists.txt
Portent/Editor/AssetIcons/: Template.kra
Portent/Editor/HDRI/: test.exr
Portent/Editor/Meshes/: unitsphere.fbx
Portent/Editor/Textures/: GridBasic.kra  GridBasic.kra~  GridBasic.png~
Portent/src/: ContentBrowser.cpp  ContentBrowser.h  DemoWindow.cpp  DemoWindow.h  DockingHost.cpp  DockingHost.h  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorLibrary.cpp  EditorLibrary.h  EditorResources.cpp  EditorResources.h  OrbitCameraController.cpp  OrbitCameraController.h  Portent.h  Project.cpp  Project.h  Widgets.cpp  Widgets.h  main.cpp
Portent/src/Controls/: FileBrowser.cpp  FileBrowser.h
Portent/src/Editors/: EditorPanel.cpp  EditorPanel.h
Portent/src/Editors/MaterialEditor/: MaterialEditor.cpp  MaterialEditor.h  MaterialEditorPreview.cpp  MaterialEditorPreview.h  MaterialEditorProperties.cpp  MaterialEditorProperties.h
Portent/src/Editors/PrefabEditor/: ObjectProperties.cpp  ObjectProperties.h  PrefabEditor.cpp  PrefabEditor.h  SceneExplorer.cpp  SceneExplorer.h
Portent/src/Editors/TextureEditor/: TextureEditor.cpp  TextureEditor.h  TextureEditorProperties.cpp  TextureEditorProperties.h
Portent/src/Importers/: AssetImporter.cpp  AssetImporter.h  TextureImporter.cpp  TextureImporter.h
Portent/src/NodeGraph/: Attribute.cpp  Attribute.h  Graph.cpp  Graph.h  GraphTypes.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  Renderer.cpp  Renderer.h  TextureRef.cpp  TextureRef.h  Value.cpp  Value.h
Portent/src/Savers/: AssetSaver.cpp  AssetSaver.h  TextureSaver.cpp  TextureSaver.h
Portent/src/Shaders/: GridBasic.frag
Portent/src/Thumbnails/: MaterialThumbnailGenerator.cpp  MaterialThumbnailGenerator.h  TextureThumbnailGenerator.cpp  TextureThumbnailGenerator.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  ThumbnailManager.cpp  ThumbnailManager.h
Portent/src/Wizards/: AssetImportWizard.cpp  AssetImportWizard.h  StaticMeshImportWizard.cpp  StaticMeshImportWizard.h
Revelation/: CMakeLists.txt  Revelation.InsightProject  package-lock.json  package.json  tsconfig.json
Revelation/ScriptSrc/: Game.ts
Revelation/ScriptSrc/Entities/: StaticMeshEntity.ts
Revelation/ScriptSrc/Types/: Insight.d.ts
(+39 files in other folders)
